// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrayToList converts an array of numbers to a linked list 1`] = `
Object {
  "rest": Object {
    "rest": Object {
      "rest": Object {
        "rest": null,
        "value": 4,
      },
      "value": 3,
    },
    "value": 2,
  },
  "value": 1,
}
`;

exports[`prepend prepends the new element onto an empty list 1`] = `
Object {
  "rest": null,
  "value": 10,
}
`;

exports[`prepend prepends the new element onto the list 1`] = `
Object {
  "rest": Object {
    "rest": Object {
      "rest": Object {
        "rest": Object {
          "rest": null,
          "value": 4,
        },
        "value": 3,
      },
      "value": 2,
    },
    "value": 1,
  },
  "value": 10,
}
`;

exports[`range returns the range from 3 to 7 1`] = `
Array [
  3,
  4,
  5,
  6,
  7,
]
`;

exports[`range returns the range from start to end 1`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
]
`;

exports[`range returns the range with a step 1`] = `
Array [
  1,
  3,
  5,
  7,
  9,
]
`;
